[gd_scene load_steps=4 format=3 uid="uid://bgcrh8nblj31w"]

[ext_resource type="Script" uid="uid://bdqq6iiu0mv64" path="res://scripts/superclasses/character.gd" id="1_fx8i1"]
[ext_resource type="PackedScene" uid="uid://bmcmtvk34xx3n" path="res://scenes/colliders/danage_emitter.tscn" id="2_ru2vu"]
[ext_resource type="PackedScene" uid="uid://bdmcafd7uhyyo" path="res://scenes/colliders/damage_receiver.tscn" id="3_njknj"]

[node name="character" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_fx8i1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="SpritePosition" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpritePosition"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpritePosition/AnimatedSprite2D"]

[node name="DamageEmitter" parent="." instance=ExtResource("2_ru2vu")]

[node name="DamageReceiver" parent="." instance=ExtResource("3_njknj")]

[editable path="DamageEmitter"]
[editable path="DamageReceiver"]
